# blender-addons

./: .gitignore  README.md  __init__.py  blender_manifest.toml  chunks.py  generation.py  msgbus.py  operators.py  panels.py  pyproject.toml  pyrightconfig.json  sockets.py  typing_utils.py
.github/workflows/: ci.yml  release.yml
addons/node_layout/: __init__.py  blender_manifest.toml  operators.py
addons/uv_map/: __init__.py  blender_manifest.toml  constants.py  menus.py  nodes.py  operators.py  overlay.py
addons/uv_map/overlay/: __init__.py  handlers.py
addons/uv_map/overlay/direction/: __init__.py  box.py  cylinder.py  generators.py  inverse.py  plane.py  shrink_wrap.py  sphere.py  utils.py
addons/uv_map/overlay/projection/: __init__.py  box.py  cylinder.py  plane.py  shrink_wrap.py  sphere.py
addons/voxel_terrain/: __init__.py  blender_manifest.toml  chunks.py  generation.py  operators.py  panels.py  properties.py  typing_helpers.py
scripts/: build.py
shared/: __init__.py  node_group_compare.py
shared/node_layout/: __init__.py  consts.py  frames.py  graph.py  grid.py  realize.py  routing.py  types.py
shared/uv_map/: __init__.py  constants.py  nodes.py  utils.py
